Make greedy algorithm use multithreads. Create a new way to get list of node neighbors by just storing the list of all neighbors once

--- a/src/main/resources/jActiveModules.props
+++ b/src/main/resources/jActiveModules.props
@@ -1,5 +1,6 @@
 AP.initialTemperature=1.0
-AP.anneal=false
-AP.quench=false
-AP.totalIterations=100
-
+AP.anneal=true
+AP.quench=true
+AP.totalIterations=2500
+AP.maxDepth=2
+AP.regional=true
